# EUpugs

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
backend/: .env.example  Dockerfile  alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 20260713_0001_initial_schema.py  20260717_0002_imported_logs.py  20260717_0003_leaderboard_stats.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: admin.py  auth.py  public.py  queue.py
backend/app/bot/: __init__.py  runtime.py
backend/app/clients/: discord_client.py  logstf_client.py
backend/app/core/: __init__.py  config.py  constants.py
backend/app/db/: base.py  session.py
backend/app/models/: base.py  entities.py
backend/app/schemas/: common.py  match.py  player.py  queue.py
backend/app/scripts/: __init__.py  import_historical_logs.py  rebuild_stats.py
backend/app/services/: auth.py  match.py  queue.py  stats.py
backend/hostedpugs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_historical_import.py  test_logstf_client.py  test_queue_service.py
deploy/: .env.ec2.example
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: MatchCard.tsx  QueueCard.tsx  Shell.tsx
frontend/src/hooks/: useAsyncData.ts
frontend/src/pages/: AdminPage.tsx  HomePage.tsx  LeaderboardPage.tsx  MatchPage.tsx  PlayerPage.tsx  QueuePage.tsx
