[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hostedpugs"
version = "0.1.0"
description = "TF2 6v6 pug platform API, bot, and shared services."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "discord.py>=2.5.2",
  "fastapi>=0.116.0",
  "httpx>=0.28.1",
  "pydantic-settings>=2.10.1",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.42",
  "uvicorn[standard]>=0.35.0",
  "psycopg[binary]>=3.2.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "ruff>=0.12.2",
]

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

